/**
 * Copyright 2017-2020 O2 Czech Republic, a.s.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/*
 * Serialization of binary blobs.
 */

syntax = "proto3";

package cz.o2.proxima.gcloud.storage.proto;

/* Header message */
message Header {

  string magic = 1;
  uint32 version = 2;
  bool gzip = 3;

}

/* Single record (StreamElement) serialied */
message Element {

  string key = 1;
  string attribute = 2;
  uint64 stamp = 3;
  bytes value = 4;
  bool delete = 5;
  bool deleteWildcard = 6;
  string uuid = 7;

}

message JsonElement {

  string key = 1;
  string attribute = 2;
  uint64 stamp = 3;
  string value = 4;
  bool delete = 5;
  bool deleteWildcard = 6;
  string uuid = 7;

}
